<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#927df465"
    tools:context=".Main2Activity">

    <!-- TITULO  -->
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_span="2"
            android:text="@string/titulo" />
    </TableRow>

    <!-- IMAGEM  -->
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginLeft="17dp"
            app:srcCompat="@drawable/hospital"
            android:layout_span="2" />
    </TableRow>

    <!-- NOME DO PACIENTE  -->
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pacienteNome" />

        <EditText
            android:id="@+id/receberPaciente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:editable="false"
            android:inputType="textPersonName" />
    </TableRow>

    <!-- NUMERO DO LEITO  -->
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numeroLeito" />

        <EditText
            android:id="@+id/receberLeito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:editable="false"
            android:inputType="number" />
    </TableRow>

    <!-- PRESSAO ARTERIAL  -->
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pressaoArterial" />

        <EditText
            android:id="@+id/receberPressao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:editable="false"
            android:inputType="number" />
    </TableRow>

    <!-- BATIMENTOS CARDIACOS  -->
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/batimentosCardiacos" />

        <EditText
            android:id="@+id/receberBatimentos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:editable="false"
            android:inputType="number" />
    </TableRow>

    <!-- TEMPERATURA CORPORAL  -->
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperaturaCorpo" />

        <EditText
            android:id="@+id/receberTemperatura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:editable="false"
            android:inputType="number" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:editable="false"
            android:text="@string/voltar" />
    </TableRow>

</TableLayout>